--- a/proyecto/Gemfile
+++ b/proyecto/Gemfile
@@ -8,8 +8,8 @@ end
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.2'
-# Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+# Use sqlite3 as the database for Active Record. Changed to postgres for herouku
+gem 'pg'
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
@@ -54,3 +54,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'devise', '~> 4.2.1'
 gem 'bootstrap-sass', '~> 3.3.7'
 gem 'redcarpet', '~> 3.4.0'
+
+gem 'rails_12factor', group: :production
