--- a/proyecto/Gemfile
+++ b/proyecto/Gemfile
@@ -1,3 +1,4 @@
+ruby '2.4.0'
 source 'https://rubygems.org'
 
 git_source(:github) do |repo_name|
@@ -5,11 +6,10 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
-ruby '2.4.0'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.0.2'
 # Use sqlite3 as the database for Active Record. Changed to postgres for herouku
-gem 'sqlite3'
+gem 'pg'
 # Use Puma as the app server
 gem 'puma', '~> 3.0'
 # Use SCSS for stylesheets
